feat: kubernetes integration, rock spawner capability (#4031)
* feat: legacy Rserve support removed

* feat: added rock spawner app type (wip)

* feat: added rock spawner app, with discovery and registration as an R cluster entry point

* feat: rock spawner integration (wip)

* feat: added k8s pod spec, ref and service

* feat: added rock pod cluster of servers

* fix: case rserver name does not have expected syntax

* feat: ensure no potential conflict with pod name prefix

* feat: improved rock spawner init phase

* feat: R sessions ui

* feat: added application lock file to avoid conflict when restarting opal pod

* feat: download R server logs of the running pods

* feat: added a beta badge to kubernetes admin page

* fix: ensure work dir exists when locking

* feat: rock spawner service has a running flag

* feat: validate image references, can be restricted to a list of allowed ones

* feat: added ui validations for pod specs

* feat: make sure resource providers are initialized in k8s context

* feat(ui): added pod spec removal