@@ -17,13 +17,15 @@ import com.google.common.eventbus.EventBus;
 import com.google.common.eventbus.Subscribe;
 import org.obiba.magma.ValueTable;
 import org.obiba.opal.core.cfg.OpalConfigurationExtension;
+import org.obiba.opal.core.cfg.PodsService;
 import org.obiba.opal.core.event.*;
 import org.obiba.opal.core.runtime.NoSuchServiceConfigurationException;
 import org.obiba.opal.core.runtime.NoSuchServiceException;
 import org.obiba.opal.core.runtime.Service;
-import org.obiba.opal.r.cluster.RServerCluster;
+import org.obiba.opal.r.rock.RServerAppsCluster;
+import org.obiba.opal.r.kubernetes.RServerPodsCluster;
+import org.obiba.opal.r.kubernetes.RockSpawnerService;
 import org.obiba.opal.r.rock.RockService;
-import org.obiba.opal.r.rserve.RserveService;
 import org.obiba.opal.r.service.event.RServiceInitializedEvent;
 import org.obiba.opal.r.service.event.RServiceStartedEvent;
 import org.obiba.opal.r.service.event.RServiceStoppedEvent;
@@ -35,7 +37,6 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Management of the R servers available.
@@ -47,7 +48,7 @@ public class RServerManagerService implements Service {
 
   public static final String DEFAULT_CLUSTER_NAME = "default";
 
-  private static final String ROCK_APP_TYPE = "rock";
+  private static final String ROCK_TYPE = "rock";
 
   private final ApplicationContext applicationContext;
 
@@ -55,21 +56,17 @@ public class RServerManagerService implements Service {
 
   private final RCacheHelper rCacheHelper;
 
-  // legacy
-  private final RserveService rserveService;
-
-  private boolean rserveServiceInDefaultCluster;
-
-  private final Map<String, RServerCluster> rClusters = Maps.newConcurrentMap();
+  private final Map<String, RServerClusterService> rClusters = Maps.newConcurrentMap();
+  private final PodsService podsService;
 
   private boolean running;
 
   @Autowired
-  public RServerManagerService(ApplicationContext applicationContext, EventBus eventBus, RserveService rserveService, RCacheHelper rCacheHelper) {
+  public RServerManagerService(ApplicationContext applicationContext, EventBus eventBus, RCacheHelper rCacheHelper, PodsService podsService) {
     this.applicationContext = applicationContext;
     this.eventBus = eventBus;
-    this.rserveService = rserveService;
     this.rCacheHelper = rCacheHelper;
+    this.podsService = podsService;
   }
 
   /**
@@ -114,14 +111,14 @@ public class RServerManagerService implements Service {
   }
 
   public RServerService getRServerWithPackages(List<String> requiredPackages) {
-    for (RServerCluster cluster : getRServerClusters()) {
+    for (RServerClusterService cluster : getRServerClusters()) {
       Optional<RServerService> rServerServiceOpt = cluster.getRServerServices().stream().findFirst();
       if (rServerServiceOpt.isPresent()) {
         List<String> packageNames = rServerServiceOpt.get().getInstalledPackagesDtos().stream()
             .map(OpalR.RPackageDto::getName)
             .filter(requiredPackages::contains)
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
         if (packageNames.size() == requiredPackages.size())
           return rServerServiceOpt.get();
       }
@@ -134,7 +131,7 @@ public class RServerManagerService implements Service {
    *
    * @return
    */
-  public Collection<RServerCluster> getRServerClusters() {
+  public Collection<RServerClusterService> getRServerClusters() {
     return rClusters.values();
   }
 
@@ -144,7 +141,7 @@ public class RServerManagerService implements Service {
    * @param name
    * @return
    */
-  public RServerCluster getRServerCluster(String name) {
+  public RServerClusterService getRServerCluster(String name) {
     if (Strings.isNullOrEmpty(name) && rClusters.containsKey(getDefaultClusterName()))
       return rClusters.get(getDefaultClusterName());
     if (rClusters.containsKey(name))
@@ -164,41 +161,76 @@ public class RServerManagerService implements Service {
 
   @Subscribe
   public synchronized void onAppRegistered(AppRegisteredEvent event) {
-    if (ROCK_APP_TYPE.equals(event.getApp().getType())) {
-      log.info("Register R server: {}", event.getApp().toString());
-      RockService rServerService = applicationContext.getBean("rockRService", RockService.class);
-      rServerService.setApp(event.getApp());
-      try {
-        // R server can only be in one cluster
-        String clusterName = rServerService.getState().getCluster();
-        if (rClusters.containsKey(clusterName))
-          // ensure a service built on same app is not already registered in the cluster
-          rClusters.get(clusterName).removeRServerService(event.getApp());
-        else
-          rClusters.put(clusterName, new RServerCluster(clusterName, eventBus));
-        rClusters.get(clusterName).addRServerService(rServerService);
-        rServerService.setRServerClusterName(clusterName);
-        if (running)
-          rServerService.start();
-        log.info("R server '{}' added to cluster: {}", rServerService.getName(), clusterName);
-      } catch (Exception e) {
-        log.error("Rock R server registration failed: {}", event.getApp().getName(), e);
-        eventBus.post(new AppRejectedEvent(event.getApp()));
-      }
-      notifyInitialized();
+    if (!ROCK_TYPE.equals(event.getApp().getType())) return;
+    log.info("Register R server: {}", event.getApp().toString());
+    RockService rServerService = applicationContext.getBean("rockRService", RockService.class);
+    rServerService.setApp(event.getApp());
+    try {
+      // R server can only be in one cluster
+      String clusterName = rServerService.getState().getCluster();
+      if (rClusters.containsKey(clusterName) && rClusters.get(clusterName) instanceof RServerAppsCluster)
+        // ensure a service built on same app is not already registered in the cluster
+        ((RServerAppsCluster) rClusters.get(clusterName)).removeRServerService(event.getApp());
+      else
+        rClusters.put(clusterName, new RServerAppsCluster(clusterName, eventBus));
+      rClusters.get(clusterName).addRServerService(rServerService);
+      rServerService.setRServerClusterName(clusterName);
+      if (running)
+        rServerService.start();
+      log.info("R server '{}' added to cluster: {}", rServerService.getName(), clusterName);
+    } catch (Exception e) {
+      log.error("Rock R server registration failed: {}", event.getApp().getName(), e);
+      eventBus.post(new AppRejectedEvent(event.getApp()));
     }
+    notifyInitialized();
   }
 
   @Subscribe
   public synchronized void onAppUnregistered(AppUnregisteredEvent event) {
-    if (ROCK_APP_TYPE.equals(event.getApp().getType())) {
-      log.info("Unregister R server: {}", event.getApp().toString());
-      rClusters.values().forEach(cluster -> cluster.removeRServerService(event.getApp()));
-      for (Map.Entry<String, RServerCluster> entry : rClusters.entrySet()) {
-        if (entry.getValue().isEmpty())
-          rClusters.remove(entry.getKey());
-      }
+    if (!ROCK_TYPE.equals(event.getApp().getType())) return;
+    log.info("Unregister R server: {}", event.getApp().toString());
+    rClusters.values().stream()
+        .filter(cluster -> cluster instanceof RServerAppsCluster)
+        .forEach(cluster -> ((RServerAppsCluster) cluster).removeRServerService(event.getApp()));
+    for (Map.Entry<String, RServerClusterService> entry : rClusters.entrySet()) {
+      if (entry.getValue().isEmpty())
+        rClusters.remove(entry.getKey());
     }
+  }
+
+  @Subscribe
+  public synchronized void onPodSpecRegistered(PodSpecRegisteredEvent event) {
+    if (!podsService.isInsideKubernetes()) return;
+    if (!ROCK_TYPE.equals(event.getPodSpec().getType())) return;
+    if (!event.getPodSpec().isEnabled()) return;
+    log.info("Register R pod: {}", event.getPodSpec().toString());
+    RockSpawnerService rServerService = applicationContext.getBean("rockSpawnerRService", RockSpawnerService.class);
+    rServerService.setPodSpec(event.getPodSpec());
+    try {
+      // R server can only be in one cluster
+      String clusterName = event.getPodSpec().getId();
+      if (!rClusters.containsKey(clusterName))
+        rClusters.put(clusterName, new RServerPodsCluster(clusterName, eventBus));
+      rClusters.get(clusterName).addRServerService(rServerService);
+      rServerService.setRServerClusterName(clusterName);
+      if (running)
+        rServerService.start();
+      log.info("R server '{}' added to cluster: {}", rServerService.getName(), clusterName);
+    } catch (Exception e) {
+      log.error("Rock R server registration failed: {}", event.getPodSpec().getId(), e);
+      eventBus.post(new PodSpecRejectedEvent(event.getPodSpec()));
+    }
+    notifyInitialized();
+  }
+
+  @Subscribe
+  public synchronized void onPodSpecUnregistered(PodSpecUnregisteredEvent event) {
+    if (!podsService.isInsideKubernetes()) return;
+    if (!ROCK_TYPE.equals(event.getPodSpec().getType())) return;
+    if (!rClusters.containsKey(event.getPodSpec().getId())) return;
+    log.info("Unregister R pod: {}", event.getPodSpec().toString());
+    ((RServerPodsCluster) rClusters.get(event.getPodSpec().getId())).removeRServerService();
+    rClusters.remove(event.getPodSpec().getId());
   }
 
   @Subscribe
@@ -223,13 +255,7 @@ public class RServerManagerService implements Service {
 
   @Override
   public void start() {
-    if (!rserveServiceInDefaultCluster && rserveService.isServiceAvailable()) {
-      if (!rClusters.containsKey(getDefaultClusterName()))
-        rClusters.put(getDefaultClusterName(), new RServerCluster(getDefaultClusterName(), eventBus));
-      rClusters.get(getDefaultClusterName()).addRServerService(rserveService);
-      rserveServiceInDefaultCluster = true;
-    }
-    rClusters.values().forEach(RServerCluster::start);
+    rClusters.values().forEach(RServerClusterService::start);
     running = true;
     eventBus.post(new RServiceStartedEvent(getName()));
     notifyInitialized();
@@ -238,7 +264,7 @@ public class RServerManagerService implements Service {
   @Override
   public void stop() {
     try {
-      rClusters.values().forEach(RServerCluster::stop);
+      rClusters.values().forEach(RServerClusterService::stop);
     } catch (Exception e) {
       // ignore
       log.debug("Failure when stopping R servers", e);
